# edgescan-api-client

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
edgescan/: __init__.py  caching.py  constants.py  logging.py  patterns.py  platforms.py  serialization.py  time.py  type_hints.py  types.py
edgescan/api/: authentication.py  client.py  session.py
edgescan/cli/: __init__.py  __main__.py  context.py  helpers.py
edgescan/cli/command_groups/: assets.py  hosts.py  licenses.py  vulnerabilities.py
edgescan/data/: parser.py
edgescan/data/types/: __init__.py  assessment.py  asset.py  base.py  host.py  license.py  location_specifier.py  vulnerability.py
resources/images/: command-line-interface.xmind
tests/: client.py
tests/cli/: runner.py  test_assets.py  test_hosts.py  test_licenses.py  test_vulnerabilities.py
tests/integration/: test_assets.py  test_hosts.py  test_licenses.py  test_parsers.py  test_vulnerabilities.py
