[tool.poetry]
name = "edgescan"
version = "2.0.2"
description = "An API client for EdgeScan"
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
license = "MIT"
repository = 'https://github.com/whitfieldsdad/edgescan'
readme = 'README.md'

[tool.poetry.scripts]
edgescan = "edgescan.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
inflection = "^0.5.1"
click = "^8.1.3"
requests = "^2.28.0"
urllib3 = "^1.26.9"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
coverage = "^6.1.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
